set standard sizing for image cards and used contain to stop some images being distorted

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -88,6 +88,13 @@ h5 {
   height: 40rem;
 }
 
+.news-story-img {
+  height: 150px;
+  width: 100%; 
+  object-fit: contain; 
+}
+
+
 #search-input {
   width: 210px;
   padding: 5px;
